--- a/w1/index.html
+++ b/w1/index.html
@@ -7,7 +7,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Chuemeng's First Page</h1>
-    <h2>Using JavaScript</h2>
+    <h1>Pre-learn week 3</h1>
 </body>
 </html>
