--- a/w4/index.html
+++ b/w4/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 4 - Looping </title>
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
 </head>
 <body>
+    <div id="output"></div>
 </body>
 </html>
