my attempt at the code, before I review other students code

--- a/w6/index.html
+++ b/w6/index.html
@@ -30,11 +30,11 @@
             <legend> Input Carbon Footprint</legend>
             <div>
                 <label for="">First Name:</label>
-                <input type = "text" name="firstName" required/>
+                <input type = "text" name="firstName" min="1" max="20" required/>
             </div>
             <div>
                 <label for="">Last Name:</label>
-                <input type = "text" name="lastName" required/>
+                <input type = "text" name="lastName" min="1" max="20" required/>
             </div>
             <div>
                 <label> Count the number of member(s) of your home:</label>
